--- a/index.html
+++ b/index.html
@@ -2,173 +2,190 @@
 layout: default
 ---
 
-<section class="section" id="home">
-
-  <div class="section-text-home">
+<section class="section section-home" id="home">
+  <div class="section-home-text">
     <h1>Games, Grub <span class="italic">&</span> Grog at the premier board game cafe of St. Louis</h1>
     <h2>The community we want in the city we love.</h2>
     <button>Support our kickstarter</button>
   </div>
 </section>
 
-<section class="section" id="about">
+<section class="section section-about" id="about">
   <div class="section-left">
     <div class="section-left-video">
 
     </div>
   </div>
   <div class="section-right">
-    <div class="section-text">
-      <h1>Who we are</h1>
-      <p>
-        We are a board game café opening soon on the Delmar Loop in St. Louis.
-        We will offer an accomodating space to play board games with friends and strangers
-        coupled with access to an extensive library of board games, all while serving
-        a light menu of food and drinks. We are part café/bar and part creative-gaming space.
-      </p>
+    <div class="section-content">
+      <div class="section-text">
+        <h1>Who we are</h1>
+        <p>
+          We are a board game café opening soon on the Delmar Loop in St. Louis.
+          We will offer an accomodating space to play board games with friends and strangers
+          coupled with access to an extensive library of board games, all while serving
+          a light menu of food and drinks. We are part café/bar and part creative-gaming space.
+        </p>
+      </div>
     </div>
   </div>
 </section>
 
-<section class="section" id="library">
+<section class="section section-library" id="library">
   <div class="section-full">
-    <h1>An extensive library</h1>
-    <p>
-      From classics like Monopoly and Scrabble to intense strategy games like Twilight
-      Imperium and Game of Thrones, our library is full of quirky, fun, and nostalgic
-      titles and is sure to have something for everyone.
+    <div class="section-full-text">
+      <h1>An extensive library</h1>
+      <p>
+        From classics like Monopoly and Scrabble to intense strategy games like Twilight
+        Imperium and Game of Thrones, our library is full of quirky, fun, and nostalgic
+        titles and is sure to have something for everyone.
+    </div>
     </p>
   </div>
 </section>
 
-<section class="section" id="menu">
+<section class="section section-menu" id="menu">
   <div class="section-left">
-    <div class="section-left-image">
-
+    <div class="section-content">
+      <div class="section-left-image">
+        {% include menu-image.svg %}
+      </div>
     </div>
   </div>
   <div class="section-right">
-    <div class="section-text">
-      <h1>A delicious menu</h1>
-      <p>
-        Our menu is comprised of a selection of artisan meats and cheeses,
-        fresh-pressed paninis, sweet cookies and savory scones, colonial tea, full-bodied
-        coffee and espressos, and all the best in St. Louis craft beer.
-      </p>
+    <div class="section-content">
+      <div class="section-text">
+        <h1>A delicious menu</h1>
+        <p>
+          Our menu is comprised of a selection of artisan meats and cheeses,
+          fresh-pressed paninis, sweet cookies and savory scones, colonial tea, full-bodied
+          coffee and espressos, and all the best in St. Louis craft beer.
+        </p>
+      </div>
     </div>
   </div>
 </section>
 
-<section class="section" id="kickstarter">
-  <div class="section-full-image">
+<section class="section section-kickstarter" id="kickstarter">
+  <div class="section-center">
+    <div class="section-center-image">
 
-  </div>
-  <div class="section-full-text">
-    <h1>Join the Revolution</h1>
-    <h2>We are seeking to raise $40,000 to kickstart our project</h2>
-    <button>Support our kickstarter</button>
+    </div>
+    <div class="section-center-text">
+      <h1>Join the Revolution</h1>
+      <h2>We are seeking to raise $40,000 to kickstart our project</h2>
+      <button>Support our kickstarter</button>
+    </div>
   </div>
 </section>
 
-<section class="section" id="contact">
+<section class="section section-contact" id="contact">
   <div class="section-left">
-    <div class="section-left-image">
-
+    <div class="section-content">
+      <div class="section-left-image">
+        {% include contact-image.svg %}
+      </div>
     </div>
   </div>
   <div class="section-right">
-    <div class="section-text">
-      <h1>Contact</h1>
-      <a href="mailto:{{ site.email }}">{{ site.email }}</a>
-      <a href="facebook.com">Follow us on Facebook</a>
+    <div class="section-content">
+      <div class="section-text">
+        <h1>Contact</h1>
+        <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+        <a href="facebook.com">Follow us on Facebook</a>
+      </div>
     </div>
   </div>
 </section>
 
-<section class="section" id="faq">
+<section class="section section-faq" id="faq">
   <h1>Frequently Asked Questions</h1>
-  <div class="faq-card">
-    <div class="faq-card-image">
 
+  <div class="faq-card-list">
+    <div class="faq-card">
+      <div class="faq-card-image">
+
+      </div>
+      <div class="faq-card-text">
+        <h2>How much does it cost?</h2>
+        <p>
+          $5 will get you access to all our board games for the whole day until
+          closing time. Should you desire to hang out in our space without board
+          games, you are completely welcome and we hope you would enjoy our
+          food and drink menu along with studying and socializing.
+        </p>
+      </div>
     </div>
-    <div class="faq-card-text">
-      <h2>How much does it cost?</h2>
-      <p>
-        $5 will get you access to all our board games for the whole day until
-        closing time. Should you desire to hang out in our space without board
-        games, you are completely welcome and we hope you would enjoy our
-        food and drink menu along with studying and socializing.
-      </p>
+
+    <div class="faq-card">
+      <div class="faq-card-image">
+
+      </div>
+      <div class="faq-card-text">
+        <h2>Why Revolution?</h2>
+        <p>
+          Revolutions are movements of the people towards change. We feel that in
+          our constantly changing culture and world, positive change needs to be
+          made by communal efforts. Alleviating poverty, spreading joy, and
+          reconciling racial tension are just a few of our personal goals and we
+          wanted our brand to reflect our values, no matter how big or lofty. As well,
+          we wanted to curate a space that harkened to the colonial times where
+          early Americans conspired about the revolution in a warm tavern. We hold
+          this historic period dearly in our hearts as it was our country’s founding, a
+          time of unbounded possibility.
+        </p>
+      </div>
+    </div>
+
+    <div class="faq-card">
+      <div class="faq-card-image">
+
+      </div>
+      <div class="faq-card-text">
+        <h2>Why the Delmar Loop?</h2>
+        <p>
+          We have lived on the Loop for the past 4 years and have grown to love
+          the milieu of culture and commerce. The Loop is at the intersection of the
+          city and the county, college students and natives, artists and business
+          people, and white and black. It is a paradoxical place of blooming
+          creativity and heartbreaking segregation, a geographical focal point of all
+          the city's best and all the city's worst. While our mission is simple we
+          realize we live in a complicated world and a complicated space. This is
+          just one of our ways to reconcile differences and create community, and
+          we feel there is no better place than where we are at now.
+        </p>
+      </div>
+    </div>
+
+    <div class="faq-card">
+      <div class="faq-card-image">
+
+      </div>
+      <div class="faq-card-text">
+        <h2>Why board games?</h2>
+        <p>
+          Throughout college, we have seen board games change people. The
+          stolid become goofy, the nonchalant become competitive, and the
+          innocent become mischievous. Board games provide universal,
+          face-to-face entertainment in a rapidly changing digital age. But, we don’t
+          aim to fight the change of our digital age with traditional entertainment or
+          outdated games, and we don’t have to. Board games are both nostalgic
+          and fresh. We grew up playing board games with our families and we
+          know many people have done the same. The classics like Monopoly and
+          Chess hold a dear part of our childhoods and were some of the best times
+          around the family dinner table. But, board games aren’t all nostalgia and
+          sentimentality, a new wave of games has seized a new audience with
+          reports of an increasing market size and industry growth. For example,
+          the game Exploding Kittens raised $8.78 million on Kickstarter in January
+          2015. Board games are going through a golden age. Game developers
+          from the big publishing houses of Hasbro to the growing indy community
+          found on Kickstarter have been revolutionizing the gaming industry and
+          reaching new and growing markets, sometimes even straddling the line of
+          digital gaming. Quite simply, they have innovated an age old experience.
+          We seek to continue this trend with board game cafés.
+        </p>
+      </div>
     </div>
   </div>
 
-  <div class="faq-card">
-    <div class="faq-card-image">
-
-    </div>
-    <div class="faq-card-text">
-      <h2>Why Revolution?</h2>
-      <p>
-        Revolutions are movements of the people towards change. We feel that in
-        our constantly changing culture and world, positive change needs to be
-        made by communal efforts. Alleviating poverty, spreading joy, and
-        reconciling racial tension are just a few of our personal goals and we
-        wanted our brand to reflect our values, no matter how big or lofty. As well,
-        we wanted to curate a space that harkened to the colonial times where
-        early Americans conspired about the revolution in a warm tavern. We hold
-        this historic period dearly in our hearts as it was our country’s founding, a
-        time of unbounded possibility.
-      </p>
-    </div>
-  </div>
-
-  <div class="faq-card">
-    <div class="faq-card-image">
-
-    </div>
-    <div class="faq-card-text">
-      <h2>Why the Delmar Loop?</h2>
-      <p>
-        We have lived on the Loop for the past 4 years and have grown to love
-        the milieu of culture and commerce. The Loop is at the intersection of the
-        city and the county, college students and natives, artists and business
-        people, and white and black. It is a paradoxical place of blooming
-        creativity and heartbreaking segregation, a geographical focal point of all
-        the city's best and all the city's worst. While our mission is simple we
-        realize we live in a complicated world and a complicated space. This is
-        just one of our ways to reconcile differences and create community, and
-        we feel there is no better place than where we are at now.
-      </p>
-    </div>
-  </div>
-
-  <div class="faq-card">
-    <div class="faq-card-image">
-
-    </div>
-    <div class="faq-card-text">
-      <h2>Why board games?</h2>
-      <p>
-        Throughout college, we have seen board games change people. The
-        stolid become goofy, the nonchalant become competitive, and the
-        innocent become mischievous. Board games provide universal,
-        face-to-face entertainment in a rapidly changing digital age. But, we don’t
-        aim to fight the change of our digital age with traditional entertainment or
-        outdated games, and we don’t have to. Board games are both nostalgic
-        and fresh. We grew up playing board games with our families and we
-        know many people have done the same. The classics like Monopoly and
-        Chess hold a dear part of our childhoods and were some of the best times
-        around the family dinner table. But, board games aren’t all nostalgia and
-        sentimentality, a new wave of games has seized a new audience with
-        reports of an increasing market size and industry growth. For example,
-        the game Exploding Kittens raised $8.78 million on Kickstarter in January
-        2015. Board games are going through a golden age. Game developers
-        from the big publishing houses of Hasbro to the growing indy community
-        found on Kickstarter have been revolutionizing the gaming industry and
-        reaching new and growing markets, sometimes even straddling the line of
-        digital gaming. Quite simply, they have innovated an age old experience.
-        We seek to continue this trend with board game cafés.
-      </p>
-    </div>
-  </div>
 </section>
