--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@ layout: default
 ---
 
 <section class="section section-home" id="home">
+  <div class="section-home-logo">
+    {% include logo-lettering.svg %}
+  </div>
   <div class="section-home-text">
     <h1>Games, Grub <span class="italic">&</span> Grog at the premier board game cafe of St. Louis</h1>
     <h2>The community we want in the city we love.</h2>
@@ -12,8 +15,10 @@ layout: default
 
 <section class="section section-about" id="about">
   <div class="section-left">
-    <div class="section-left-video">
-
+    <div class="section-content">
+      <div class="section-left-image">
+        {% include logo-full.svg %}
+      </div>
     </div>
   </div>
   <div class="section-right">
