--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="section-home-logo">
     {% include logo-lettering.svg %}
   </div>
-  <div class="section-home-text">
+  <div class="section-home-text" data-aos="fade-in" data-aos-easing="ease-in" data-aos-duration="300" data-aos-delay="500">
     <h1>Games, Grub <span class="italic">&</span> Grog at the premier board game cafe of St. Louis</h1>
     <h2>The community we want in the city we love.</h2>
     <button>Support our kickstarter</button>
@@ -16,7 +16,7 @@ layout: default
 <section class="section section-about" id="about">
   <div class="section-left">
     <div class="section-content">
-      <div class="section-left-image">
+      <div class="section-left-image" data-aos="fade-in" data-aos-easing="linear" data-aos-duration="600" data-aos-delay="800">
         {% include logo-full.svg %}
       </div>
     </div>
@@ -38,7 +38,7 @@ layout: default
 
 <section class="section section-library" id="library">
   <div class="section-full">
-    <div class="section-full-text">
+    <div class="section-full-text" data-aos="fade-in" data-aos-easing="ease-in" data-aos-duration="300" data-aos-delay="500">
       <h1>An extensive library</h1>
       <p>
         From classics like Monopoly and Scrabble to intense strategy games like Twilight
@@ -52,7 +52,7 @@ layout: default
 <section class="section section-menu" id="menu">
   <div class="section-left">
     <div class="section-content">
-      <div class="section-left-image">
+      <div class="section-left-image" data-aos="fade-in" data-aos-easing="linear" data-aos-duration="600" data-aos-delay="800">
         {% include menu-image.svg %}
       </div>
     </div>
@@ -73,10 +73,7 @@ layout: default
 
 <section class="section section-kickstarter" id="kickstarter">
   <div class="section-center">
-    <div class="section-center-image">
-
-    </div>
-    <div class="section-center-text">
+    <div class="section-center-text" data-aos="fade-in" data-aos-easing="ease-in" data-aos-duration="300" data-aos-delay="500">
       <h1>Join the Revolution</h1>
       <h2>We are seeking to raise $40,000 to kickstart our project</h2>
       <button>Support our kickstarter</button>
@@ -87,7 +84,7 @@ layout: default
 <section class="section section-contact" id="contact">
   <div class="section-left">
     <div class="section-content">
-      <div class="section-left-image">
+      <div class="section-left-image" data-aos="fade-in" data-aos-easing="linear" data-aos-duration="600" data-aos-delay="800">
         {% include contact-image.svg %}
       </div>
     </div>
@@ -107,7 +104,7 @@ layout: default
   <h1>Frequently Asked Questions</h1>
 
   <div class="faq-card-list">
-    <div class="faq-card">
+    <div class="faq-card" data-aos="fade-right" data-aos-easing="ease-in" data-aos-delay="200">
       <div class="faq-card-image">
 
       </div>
@@ -122,7 +119,7 @@ layout: default
       </div>
     </div>
 
-    <div class="faq-card">
+    <div class="faq-card" data-aos="fade-right" data-aos-easing="ease-in" data-aos-delay="300">
       <div class="faq-card-image">
 
       </div>
@@ -142,7 +139,7 @@ layout: default
       </div>
     </div>
 
-    <div class="faq-card">
+    <div class="faq-card" data-aos="fade-right" data-aos-easing="ease-in" data-aos-delay="200">
       <div class="faq-card-image">
 
       </div>
@@ -162,7 +159,7 @@ layout: default
       </div>
     </div>
 
-    <div class="faq-card">
+    <div class="faq-card" data-aos="fade-right" data-aos-easing="ease-in" data-aos-delay="100">
       <div class="faq-card-image">
 
       </div>
