started using absolutely responsive images; working on getting srcset to work

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@ layout: default
 </section>
 
 <section class="section section-library" id="library">
+  <div class="section-bg-img">
+    <img srcset="images/library768.png 768w,
+      images/library1024.png 1024w,
+      images/library1440.png 1440w,
+      images/library1920.png 1920w"
+      src="images/library1440.png" alt="Library"/>
+  </div>
   <div class="section-full">
     <div class="section-full-text" data-aos="fade-in" data-aos-easing="ease-in" data-aos-duration="300" data-aos-delay="400">
       <h1>An extensive library</h1>
