made rest of bg images absolutely responsive images; cleaned up scss

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@ layout: default
 ---
 
 <section class="section section-home" id="home">
+  <div class="section-bg-img">
+    <img srcset="images/home768.png 768w,
+      images/home1024.png 1024w,
+      images/home1440.png 1440w,
+      images/home1920.png 1920w"
+      sizes="100vw"
+      src="images/home1440.png" alt="Revolution Game House"/>
+  </div>
   <div class="section-home-logo">
     {% include logo-lettering.svg %}
   </div>
@@ -50,6 +58,7 @@ layout: default
       images/library1024.png 1024w,
       images/library1440.png 1440w,
       images/library1920.png 1920w"
+      sizes="100vw"
       src="images/library1440.png" alt="Library"/>
   </div>
   <div class="section-full">
@@ -87,6 +96,14 @@ layout: default
 </section>
 
 <section class="section section-kickstarter" id="kickstarter">
+  <div class="section-bg-img">
+    <img srcset="images/kickstarter768.png 768w,
+      images/kickstarter1024.png 1024w,
+      images/kickstarter1440.png 1440w,
+      images/kickstarter1920.png 1920w"
+      sizes="100vw"
+      src="images/kickstarter1440.png" alt="Support our Kickstarter"/>
+  </div>
   <div class="section-center">
     <div class="section-center-text" data-aos="fade-in" data-aos-easing="ease-in" data-aos-duration="300" data-aos-delay="400">
       <h1>Join the Revolution</h1>
