changed fonts; added more navigation styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <section class="section section-home" id="home">
   <div class="section-bg-img">
-    <img srcset="images/home768.png 768w,
+    <img srcset="
       images/home1024.png 1024w,
       images/home1440.png 1440w,
       images/home1920.png 1920w"
@@ -32,7 +32,7 @@ layout: default
 <section class="section section-about" id="about">
   <div class="section-left">
     <div class="section-content">
-      <div class="section-left-image" data-aos="fade-in" data-aos-easing="linear" data-aos-duration="300" data-aos-delay="300">
+      <div class="section-left-image" data-aos="fade-in" data-aos-easing="ease-in" data-aos-duration="300" data-aos-delay="400">
         {% include logo-full.svg %}
       </div>
     </div>
@@ -54,7 +54,7 @@ layout: default
 
 <section class="section section-library" id="library">
   <div class="section-bg-img">
-    <img srcset="images/library768.png 768w,
+    <img srcset="
       images/library1024.png 1024w,
       images/library1440.png 1440w,
       images/library1920.png 1920w"
@@ -76,7 +76,7 @@ layout: default
 <section class="section section-menu" id="menu">
   <div class="section-left">
     <div class="section-content">
-      <div class="section-left-image" data-aos="fade-in" data-aos-easing="linear" data-aos-duration="600" data-aos-delay="300">
+      <div class="section-left-image" data-aos="fade-in" data-aos-easing="ease-in" data-aos-duration="600" data-aos-delay="400">
         {% include menu-image.svg %}
       </div>
     </div>
@@ -97,7 +97,7 @@ layout: default
 
 <section class="section section-kickstarter" id="kickstarter">
   <div class="section-bg-img">
-    <img srcset="images/kickstarter768.png 768w,
+    <img srcset="
       images/kickstarter1024.png 1024w,
       images/kickstarter1440.png 1440w,
       images/kickstarter1920.png 1920w"
@@ -118,7 +118,7 @@ layout: default
 <section class="section section-contact" id="contact">
   <div class="section-left">
     <div class="section-content">
-      <div class="section-left-image" data-aos="fade-in" data-aos-easing="linear" data-aos-duration="600" data-aos-delay="300">
+      <div class="section-left-image" data-aos="fade-in" data-aos-easing="ease-in" data-aos-duration="600" data-aos-delay="400">
         {% include contact-image.svg %}
       </div>
     </div>
@@ -175,7 +175,7 @@ layout: default
       </div>
     </div>
 
-    <div class="faq-card" data-aos="fade-right" data-aos-easing="ease-in">
+    <div class="faq-card" data-aos="fade-right" data-aos-easing="ease-in" data-aos-target="top center">
       <div class="faq-card-image">
         {% include cards.svg %}
       </div>
@@ -195,7 +195,7 @@ layout: default
       </div>
     </div>
 
-    <div class="faq-card" data-aos="fade-right" data-aos-easing="ease-in">
+    <div class="faq-card" data-aos="fade-right" data-aos-easing="ease-in" data-aos-target="top center">
       <div class="faq-card-image">
         {% include chess-piece.svg %}
       </div>
