--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ layout: default
         <h1>Contact</h1>
         <ul class="section-contact-links">
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-          <li><a href="https://www.facebook.com/revolutiongamehouse/">Follow us on Facebook</a></li>
+          <li><a href="https://www.facebook.com/revolutiongamehouse/"  target="_blank">Follow us on Facebook</a></li>
           <!-- <li><span class="section-contact-links-icon">{% include mail-icon.svg %}</span><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
           <li><span class="section-contact-links-icon">{% include facebook-icon.svg %}</span><a href="facebook.com">Follow us on Facebook</a></li> -->
         </ul>
