Added Kickstarter link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
     <div class="section-home-text" data-aos="fade-in" data-aos-easing="ease-in" data-aos-duration="300" data-aos-delay="200">
       <h1>Games, Grub <span class="italic">&</span> Grog at the premier board game café of St. Louis</h1>
       <h2>The community we want in the city we love.</h2>
-      <form action="http://www.kickstarter.com/projects/450982150/1755212581/share" target="_blank">
+      <form action="https://www.kickstarter.com/projects/450982150/revolution-game-house-premier-board-game-cafe-of-s" target="_blank">
         <button type="submit">Support our kickstarter</button>
       </form>
     </div>
@@ -110,7 +110,7 @@ layout: default
     <div class="section-center-text" data-aos="fade-in" data-aos-easing="ease-in" data-aos-duration="300" data-aos-delay="400">
       <h1>Join the Revolution</h1>
       <h2>We are seeking to raise $40,000 to kickstart our project</h2>
-      <form action="http://www.kickstarter.com/projects/450982150/1755212581/share" target="_blank">
+      <form action="https://www.kickstarter.com/projects/450982150/revolution-game-house-premier-board-game-cafe-of-s" target="_blank">
         <button type="submit">Support our kickstarter</button>
       </form>
     </div>
