updated links to facebook and kickstarter

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
     <div class="section-home-text" data-aos="fade-in" data-aos-easing="ease-in" data-aos-duration="300" data-aos-delay="200">
       <h1>Games, Grub <span class="italic">&</span> Grog at the premier board game café of St. Louis</h1>
       <h2>The community we want in the city we love.</h2>
-      <form action="https://www.kickstarter.com/projects/450982150/revolution-game-house-premier-board-game-cafe-of-s" target="_blank">
+      <form action="http://kck.st/2ecZw8M" target="_blank">
         <button type="submit">Support our kickstarter</button>
       </form>
     </div>
@@ -39,6 +39,11 @@ layout: default
       </div>
     </div>
   </div>
+  <!-- <div class="section-left">
+    <div class="section-content">
+      <iframe style="min-height:100vh" width="100%" height="100%" src="https://www.kickstarter.com/projects/450982150/revolution-game-house-premier-board-game-cafe-of-s/widget/video.html" frameborder="0" scrolling="no"> </iframe>
+    </div>
+  </div> -->
   <div class="section-right">
     <div class="section-content">
       <div class="section-text">
@@ -110,7 +115,7 @@ layout: default
     <div class="section-center-text" data-aos="fade-in" data-aos-easing="ease-in" data-aos-duration="300" data-aos-delay="400">
       <h1>Join the Revolution</h1>
       <h2>We are seeking to raise $40,000 to kickstart our project</h2>
-      <form action="https://www.kickstarter.com/projects/450982150/revolution-game-house-premier-board-game-cafe-of-s" target="_blank">
+      <form action="http://kck.st/2ecZw8M" target="_blank">
         <button type="submit">Support our kickstarter</button>
       </form>
     </div>
@@ -131,7 +136,7 @@ layout: default
         <h1>Contact</h1>
         <ul class="section-contact-links">
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-          <li><a href="https://www.facebook.com/revolutiongamehouse/"  target="_blank">Follow us on Facebook</a></li>
+          <li><a href="https://www.facebook.com/revolutiongamehouse/?fref=ts"  target="_blank">Follow us on Facebook</a></li>
           <!-- <li><span class="section-contact-links-icon">{% include mail-icon.svg %}</span><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
           <li><span class="section-contact-links-icon">{% include facebook-icon.svg %}</span><a href="facebook.com">Follow us on Facebook</a></li> -->
         </ul>
